--- a/html_dotinstall/index.html
+++ b/html_dotinstall/index.html
@@ -2,7 +2,9 @@
 <html lang="ja">
   <head>
     <meta charset="utf-8">
+    <meta name="description" content="初めてのHTML文書です。" />
     <title>はじめてのHTML</title>
+    <link rel="shortcut icon" href="favicon.ico" />
   </head>
   <body>
     <p>こんにちは</p>
