dotinstall<id, class,style属性を使ってみよう>

--- a/html_dotinstall/index.html
+++ b/html_dotinstall/index.html
@@ -3,14 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>はじめてのHTML</title>
-    <!-- <style>
-      body {
-        background-color: skyblue;
-      }
-    </style> -->
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <p>こんにちは</p>
+    <p id="message">こんにちは</p>
+    <p class="message active">こんにちは</p>
+    <p class="message" style="background: skyblue;">こんにちは</p>
   </body>
 </html>
